bfs branch added and added the graphSearch function. All working